css/Expectoo.css file added

--- a/css/Expectoo.css
+++ b/css/Expectoo.css
@@ -141,4 +141,13 @@ h2{
 .right{
     padding-right: 120px;
 }
+.rig{
+    padding-right: 100px;
+}
+.tag{
+    padding-right: 180px;
+}
+.sax{
+    padding-right: 150px;
+}
 
