--- a/css/Expectoo.css
+++ b/css/Expectoo.css
@@ -109,8 +109,11 @@ button:hover{
     background-color: white;
     text-align: center;
 }
+.mode{
+    padding-top: 20px;
+}
 h2{
-    text-indent: 27px;
+    text-indent: 5px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #one{
@@ -128,8 +131,9 @@ h2{
     color: black;
 }
 .comfort2{
+    margin-top: 5%;
     display: flex;
-    gap: 80px;
+    gap: 100px;
     padding: 50px;
     justify-content: center;
     align-items: center;
@@ -149,5 +153,38 @@ h2{
 }
 .sax{
     padding-right: 150px;
+}
+.main{
+    background-color: rgb(44, 44, 111);
+
+}
+#peter{
+    color: white;
+}
+.left{
+    display: flex;
+}
+.ex{
+    padding-top: 20px;
+    padding-left: 30px;
+}
+#peter{
+    padding-top: 1px;
+    padding-left: 10px;
+}
+.ri{
+    display: flex;
+    padding-top: 20px;
+    padding-left: 30px;
+}
+#email{
+    color: white;
+    padding-top: 2px;
+    padding-left: 10px;
+}
+.side{
+    display: flex;
+    padding-left: 30px;
+    padding-top: 30px;
 }
 
