--- a/css/Expectoo.css
+++ b/css/Expectoo.css
@@ -156,7 +156,17 @@ h2{
 }
 .main{
     background-color: rgb(44, 44, 111);
-
+    display: flex;
+    flex-direction: row;
+}
+.clien{
+ padding-left: 50px;
+ padding-top: 50px;
+}
+.ex{
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
 }
 #peter{
     color: white;
