--- a/css/Expectoo.css
+++ b/css/Expectoo.css
@@ -167,6 +167,39 @@ h2{
     color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
+    border-bottom:1px solid white;
+    width: 200px;
+    padding-left: 1px;
+    padding-top: 15px;
+    margin-left: 39px;
+}
+#Clients{
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    padding-left: 1px;
+    padding-top: 2px;
+    width: 300px
+
+}
+#joff{
+    font-size: 20px;
+    line-height: 40px;
+}
+.team{
+    padding-top: 50px;
+    font-size: 25px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+    padding-left: 150px;
+
+}
+#joint{
+    line-height:40px ;
+    font-size: 20px;
+}
+#tog{
+    padding-left: 10px;
 }
 #peter{
     color: white;
@@ -174,10 +207,7 @@ h2{
 .left{
     display: flex;
 }
-.ex{
-    padding-top: 20px;
-    padding-left: 30px;
-}
+
 #peter{
     padding-top: 1px;
     padding-left: 10px;
@@ -196,5 +226,42 @@ h2{
     display: flex;
     padding-left: 30px;
     padding-top: 30px;
+}
+.main2{
+    display: flex;
+    margin-top: 50px;
+    padding-left: 500px;
+}
+.cont4{
+    padding-left: 300px;
+    padding-top: 20px;
+    color: white;
+    margin-right: 320px;
+}
+.cont4 li a{
+    color: white;
+    text-decoration: none;
+    line-height: 40px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+#com{
+    line-height: 50px;
+    padding-top: 1px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#tat{
+    line-height: 60px;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+}
+.cont3 li a{
+    text-decoration: none;
+    line-height: 40px;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
 }
 
